--- a/frontend/src/components/Portrait/Portrait.css
+++ b/frontend/src/components/Portrait/Portrait.css
@@ -13,7 +13,7 @@
    position: absolute;
    top: 48%;
    left: 50%;
-   transform: translate(-50%, -50%) rotate(10deg);
+   transform: translate(-50%, -50%);
    z-index: 10;
    object-fit: contain;
    object-position: center;
