--- a/frontend/src/components/ModalConfirm/ModalConfirm.css
+++ b/frontend/src/components/ModalConfirm/ModalConfirm.css
@@ -11,7 +11,7 @@
 
 .section-line{
    height: 8px;
-   background-color: var(--sky);
+   background-color: var(--mustard);
    border-radius: 10px 10px 0 0;
 }
 
